# notzero

./: .travis.yml  LICENSE  README.md  changelog  default.nix  notzero.cabal  notzero.nix
src/Data/: AccNotZeroOr.hs  NotZero.hs  NotZeroOr.hs
