name:               notzero
version:            0.0.11
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
copyright:          Copyright (C) 2015 NICTA Limited
synopsis:           A data type for representing numeric values, except zero.
category:           Data, Numeric
description:        
  <<http://i.imgur.com/Ns5hntl.jpg>>
  .
  A data type for representing numeric values, except zero. This might be useful in working with process exit codes.
homepage:           https://github.com/NICTA/notzero
bug-reports:        https://github.com/NICTA/notzero/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:NICTA/notzero.git

library
  default-language:
                    Haskell2010

  build-depends:
                      base          >= 4.7 && < 5
                    , mtl           >= 2.0 && < 2.3
                    , semigroups    >= 0.8 && < 1
                    , semigroupoids >= 4.0 && < 5.3
                    , bifunctors    >= 3.0 && < 5.6
                    , lens          >= 4.0 && < 5
                    , transformers  >= 0.3 && < 0.6

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.AccNotZeroOr
                    Data.NotZero
                    Data.NotZeroOr

